docs/core/v0.11/_sources/reference/tmlt/core/measures/index.rst.txt



***************
measures
***************

.. py:module:: tmlt.core.measures

.. autoapi-nested-parse::

   Module containing supported variants for differential privacy.











Classes
=======

.. list-table::

   * - :class:`.Measure`
     - Base class for output measures.
   * - :class:`.PureDP`
     - The distance between distributions in "pure" differential privacy.
   * - :class:`.ApproxDP`
     - The distance between distributions in approximate differential privacy.
   * - :class:`.RhoZCDP`
     - The distance between distributions in ρ-Zero Concentrated Differential Privacy.
   * - :class:`.PrivacyBudget`
     - An abstract class for representing a privacy budget.
   * - :class:`.PureDPBudget`
     - A pure dp budget.
   * - :class:`.ApproxDPBudget`
     - An approximate dp budget.
   * - :class:`.RhoZCDPBudget`
     - A zCDP budget.

   
.. py:class:: Measure

   Bases: :class:`abc.ABC`

   Base class for output measures.

   Each measure defines a way of measuring "distance" between two distributions
   that corresponds to a te guarantees of a variant of differential privacy. Note
   that these "distances" are not metrics.






   .. py:method:: __eq__(other)

      Return True if both measures are equal.


   .. py:method:: validate(value)
      :abstractmethod:

      Raises an error if `value` not a valid distance.

      :param value: A distance between two probability distributions under this measure.


   .. py:method:: compare(value1, value2)
      :abstractmethod:

      Returns True if `value1` is less than or equal to `value2`.



   
.. py:class:: PureDP

   Bases: :class:`Measure`

   The distance between distributions in "pure" differential privacy.

   As in Definition 1 of :cite:`DworkMNS06`.

   In particular, under this measure the distance :math:`\epsilon` between two
   distributions :math:`X` and :math:`Y` with the same range is:

   .. math::

       \epsilon = max_{S \subseteq Range(X)}\left(max\left(
           ln\left(\frac{Pr[X \in S]}{Pr[Y \in S]}\right),
           ln\left(\frac{Pr[Y \in S]}{Pr[X \in S]}\right)\right)\right)







   .. py:method:: validate(value)

      Raises an error if `value` not a valid distance.

      * `value` must be a nonnegative real or infinity

      :param value: A distance between two probability distributions under this measure.


   .. py:method:: compare(value1, value2)

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: __eq__(other)

      Return True if both measures are equal.



   
.. py:class:: ApproxDP

   Bases: :class:`Measure`

   The distance between distributions in approximate differential privacy.

   As introduced in :cite:`DworkKMMN06`.

   In particular, under this measure valid distances :math:`(\epsilon, \delta)`
   between two distributions :math:`X` and :math:`Y` with the same range are those
   :math:`(\epsilon, \delta)` satisfying:

   .. math::

       \epsilon = max_{S \subseteq Range(X)}\left(max\left(
           ln\left(\frac{Pr[X \in S] - \delta}{Pr[Y \in S]}\right),
           ln\left(\frac{Pr[Y \in S] - \delta}{Pr[X \in S]}\right)\right)\right)







   .. py:method:: validate(value)

      Raises an error if `value` not a valid distance.

      * `value` must be a tuple with two values: (epsilon, delta)
      * epsilon must be a nonnegative real or infinity
      * delta must be a real between 0 and 1 (inclusive)

      :param value: A distance between two probability distributions under this measure.


   .. py:method:: compare(value1, value2)

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: __eq__(other)

      Return True if both measures are equal.



   
.. py:class:: RhoZCDP

   Bases: :class:`Measure`

   The distance between distributions in ρ-Zero Concentrated Differential Privacy.

   As in Definition 1.1 of :cite:`BunS16`.

   In particular, under this measure the distance :math:`\rho`
   between two distributions :math:`X` and :math:`Y` with the same range is:

   .. math::
       \rho = max_{\alpha \in (1, \infty)}\left(max\left(
           \frac{D_{\alpha}(X||Y)}{\alpha},
           \frac{D_{\alpha}(Y||X)}{\alpha}\right)\right)

   where :math:`D_{\alpha}(X||Y)` is the α-Rényi divergence between X and Y.






   .. py:method:: validate(value)

      Raises an error if `value` not a valid distance.

      * `value` must be a nonnegative real or infinity

      :param value: A distance between two probability distributions under this measure.


   .. py:method:: compare(value1, value2)

      Returns True if `value1` is less than or equal to `value2`.


   .. py:method:: __eq__(other)

      Return True if both measures are equal.



   
.. py:class:: PrivacyBudget(value)

   Bases: :class:`abc.ABC`

   An abstract class for representing a privacy budget.

   This class is meant to allow operations on a budget (e.g. subtracting, checking if
   the budget is infinite) without needing to know the type of the budget.






   .. automethod:: __init__
   .. py:method:: cast(measure: RhoZCDP, value: PrivacyBudgetInput) -> RhoZCDPBudget
               cast(measure: PureDP, value: PrivacyBudgetInput) -> PureDPBudget
               cast(measure: ApproxDP, value: PrivacyBudgetInput) -> ApproxDPBudget
      :classmethod:

      Return a privacy budget matching the passed measure.

      :param measure: The measure to return a privacy budget for.
      :param value: The value of the privacy budget.


   .. py:method:: value()
      :property:

      Return the value of the privacy budget.


   .. py:method:: is_finite()
      :abstractmethod:

      Return true iff the budget is finite.


   .. py:method:: can_spend_budget(other)
      :abstractmethod:

      Return true iff we can spend budget `other`.

      :param other: The privacy budget we would like to spend.


   .. py:method:: subtract(other)
      :abstractmethod:

      Return a new budget after subtracting `other`.

      If the budget represented by this class is infinite, return the current budget.

      :param other: The privacy budget to subtract.

      :raises ValueError: If there is not enough privacy budget to subtract other.


   .. py:method:: __eq__(other)

      Check is this instance is equal to `other`.

      :param other: The other instance.



   
.. py:class:: PureDPBudget(value)

   Bases: :class:`PrivacyBudget`

   A pure dp budget.






   .. automethod:: __init__
   .. py:method:: value()
      :property:

      Return the value of the privacy budget.


   .. py:method:: epsilon()
      :property:

      The pure dp privacy loss.


   .. py:method:: is_finite()

      Return true iff the budget is finite.


   .. py:method:: can_spend_budget(other)

      Return true iff we can spend budget `other`.

      :param other: The privacy budget we would like to spend.


   .. py:method:: subtract(other)

      Return a new budget after subtracting `other`.

      If the budget represented by this class is infinite, return the current budget.

      :param other: The privacy budget to subtract.

      :raises ValueError: If there is not enough privacy budget to subtract other.


   .. py:method:: cast(measure: RhoZCDP, value: PrivacyBudgetInput) -> RhoZCDPBudget
               cast(measure: PureDP, value: PrivacyBudgetInput) -> PureDPBudget
               cast(measure: ApproxDP, value: PrivacyBudgetInput) -> ApproxDPBudget
      :classmethod:

      Return a privacy budget matching the passed measure.

      :param measure: The measure to return a privacy budget for.
      :param value: The value of the privacy budget.


   .. py:method:: __eq__(other)

      Check is this instance is equal to `other`.

      :param other: The other instance.



   
.. py:class:: ApproxDPBudget(value)

   Bases: :class:`PrivacyBudget`

   An approximate dp budget.






   .. automethod:: __init__
   .. py:method:: value()
      :property:

      Return the value of the privacy budget.


   .. py:method:: epsilon()
      :property:

      The first component of the privacy loss.


   .. py:method:: delta()
      :property:

      The second component of the privacy loss.


   .. py:method:: is_finite()

      Return true iff the budget is finite.


   .. py:method:: can_spend_budget(other)

      Return true iff we can spend budget `other`.

      :param other: The privacy budget we would like to spend.


   .. py:method:: subtract(other)

      Return a new budget after subtracting `other`.

      If the budget represented by this class is infinite, return the current budget.

      :param other: The privacy budget to subtract.

      :raises ValueError: If there is not enough privacy budget to subtract other.


   .. py:method:: cast(measure: RhoZCDP, value: PrivacyBudgetInput) -> RhoZCDPBudget
               cast(measure: PureDP, value: PrivacyBudgetInput) -> PureDPBudget
               cast(measure: ApproxDP, value: PrivacyBudgetInput) -> ApproxDPBudget
      :classmethod:

      Return a privacy budget matching the passed measure.

      :param measure: The measure to return a privacy budget for.
      :param value: The value of the privacy budget.


   .. py:method:: __eq__(other)

      Check is this instance is equal to `other`.

      :param other: The other instance.



   
.. py:class:: RhoZCDPBudget(value)

   Bases: :class:`PrivacyBudget`

   A zCDP budget.






   .. automethod:: __init__
   .. py:method:: value()
      :property:

      Return the value of the privacy budget.


   .. py:method:: rho()
      :property:

      The zCDP privacy loss.


   .. py:method:: is_finite()

      Return true iff the budget is finite.


   .. py:method:: can_spend_budget(other)

      Return true iff we can spend budget `other`.

      :param other: The privacy budget we would like to spend.


   .. py:method:: subtract(other)

      Return a new budget after subtracting `other`.

      If the budget represented by this class is infinite, return the current budget.

      :param other: The privacy budget to subtract.

      :raises ValueError: If there is not enough privacy budget to subtract other.


   .. py:method:: cast(measure: RhoZCDP, value: PrivacyBudgetInput) -> RhoZCDPBudget
               cast(measure: PureDP, value: PrivacyBudgetInput) -> PureDPBudget
               cast(measure: ApproxDP, value: PrivacyBudgetInput) -> ApproxDPBudget
      :classmethod:

      Return a privacy budget matching the passed measure.

      :param measure: The measure to return a privacy budget for.
      :param value: The value of the privacy budget.


   .. py:method:: __eq__(other)

      Check is this instance is equal to `other`.

      :param other: The other instance.






